--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
 		<div class="wrapper">
 		<div class="banner-fc">
 		<div class="text">GRAYSCALE</div>
-		<div class="boxA">Get Started</div>
+		<div class="boxa">Get Started</div>
 		</div>
 		</div>
 	</div>
 	<div class="Bootstrap">Bootstrap
 		<div class="wrapper">
 		<div class="Bootstrap-fc">
-		<div class="textA">Built with Bootstrap 5</div>
+		<div class="texta">Built with Bootstrap 5</div>
 		</div>
 		</div>
 	</div>
 	<div class="Shoreline">Shoreline
 		<div class="wrapper">
 		<div class="Shoreline-fc">
-			<div class="boxA">Image</div>
-			<div class="boxB">Text</div>
+			<div class="boxa">Image</div>
+			<div class="boxb">Text</div>
 		</div>
 		</div>
 	</div>
 	<div class="portfolio">portfolio
 		<div class="wrapper">
 		<div class="portfolio-fc">
-			<div class="boxA">Image</div>
-			<div class="boxB">Text</div>
-			<div class="boxC">Text</div>
-			<div class="boxD">Image</div>	
+			<div class="boxa">Image</div>
+			<div class="boxb">Text</div>
+			<div class="boxc">Text</div>
+			<div class="boxd">Image</div>	
 		</div>
 		</div>
 	</div>
@@ -50,17 +50,17 @@
 		<div class="wrapper">
 		<div class="updates-fc">
 		<div class="text"><b>Subscribe to receive updates!</b></div>
-		<div class="boxA">Enter Email</div>
-		<div class="boxB">Notify Me!</div>
+		<div class="boxa">Enter Email</div>
+		<div class="boxb">Notify Me!</div>
 		</div>
 		</div>
 	</div>
 	<div class="contact">contact
 		<div class="wrapper">
 		<div class="contact-fc">
-			<div class="boxA">ADDRESS</div>
-			<div class="boxB">EMAIL</div>
-			<div class="boxC">PHONE</div>
+			<div class="boxa">ADDRESS</div>
+			<div class="boxb">EMAIL</div>
+			<div class="boxc">PHONE</div>
 		</div>
 		</div>
 	</div>
